tests/invalid-type/validator.cue
"invalidBoolIntSent": {
	$0: {
		error: string
	}
}
"invalidIntBoolSent": {
	$0: {
		error: string
	}
}
"invalidBytesFloatSent": {
	$0: {
		error: string
	}
}
"invalidArrayMapSent": {
	$0: {
		error: string
	}
}